--- a/estatistica.ipynb
+++ b/estatistica.ipynb
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machine-learnig-py3.12",
+   "display_name": "estatistica",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
