adicionada biblioteca matplot

--- a/estatistica.ipynb
+++ b/estatistica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "82012083",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c6b8118b",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4885c045",
    "metadata": {},
    "outputs": [],
@@ -622,6 +622,24 @@
    "source": [
     "# Correlação do DataFrame,segundo Spearman\n",
     "df_medidas.corr(method='spearman')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b954ad",
+   "metadata": {},
+   "source": [
+    "### representações gráficas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a021845c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_medidas.idades.hist()"
    ]
   }
  ],
