--- a/Estatistica/estatistica.ipynb
+++ b/Estatistica/estatistica.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "82012083",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8be9c675",
    "metadata": {},
    "outputs": [
@@ -22,18 +22,18 @@
        "'2.3.3'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pandas.__version__"
+    "pd.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c6b8118b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4ffbfb27",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        " 'altura': [160, 162, 165, 168, 172, 174, 174, 174, 176]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,17 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4885c045",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_medidas = pandas.DataFrame.from_dict(dict_medidas)"
+    "df_medidas = pd.DataFrame.from_dict(dict_medidas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f4c395d8",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "8     80     176"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d8787970",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "np.float64(41.77777777777778)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "807d169c",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "np.float64(40.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "67463631",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "Name: idade, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f6a33588",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "np.float64(509.94444444444446)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "eb67b86e",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "np.float64(22.58194952709895)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4295ce0c",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "np.float64(54.05253876167302)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3af207f3",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "np.float64(3.4803552812368785)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f223097c",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "np.float64(0.368108517895537)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "18ad5eac",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "np.float64(-0.598486996170113)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6a07c995",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "np.float64(-1.1344461075421046)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d31bd119",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "np.float64(-1.3372641199913002)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "f0708bbf",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "Name: idade, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f34882b9",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "altura  0.931024  1.000000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f9f1851b",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "np.float64(0.9310236045054339)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "f7ee3ea8",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "altura  0.978803  1.000000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "db741fa3",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "a70d8150",
    "metadata": {},
    "outputs": [],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "bde818eb",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        " 'quantidade': [3000, 5000, 1500, 2500]}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,17 +737,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "38b292e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vendas = pandas.DataFrame.from_dict(dict_vendas)"
+    "df_vendas = pd.DataFrame.from_dict(dict_vendas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "211f95ef",
    "metadata": {},
    "outputs": [
@@ -814,7 +814,7 @@
        "3       casa  580000        2500"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "6241bcc2",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
        "<Axes: xlabel='categoria'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "67ee70cf",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "<Axes: xlabel='categoria'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "930b4aa9",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "<Axes: ylabel='categoria'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "1d1eddb3",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
        "<Axes: ylabel='categoria'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "405c2aa1",
    "metadata": {},
    "outputs": [
@@ -963,7 +963,7 @@
        "<Axes: xlabel='idade', ylabel='altura'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "be8e4b2d",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "fcfdd847",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 37,
    "id": "80bcdb16",
    "metadata": {},
    "outputs": [],
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "id": "d8d12627",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1075,7 @@
        " 'valor': [400000, 800000, 500000, 800000, 900000]}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,17 +1086,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "id": "2da98077",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_faturamento = pandas.DataFrame.from_dict(dict_faturamento)"
+    "df_faturamento = pd.DataFrame.from_dict(dict_faturamento)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "id": "500bae74",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1164,7 @@
        "4  2023-01-01  900000"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "id": "9febca49",
    "metadata": {},
    "outputs": [
@@ -1201,17 +1201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "id": "706b4ddd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_faturamento['data_ref'] = pandas.to_datetime(df_faturamento['data_ref'])"
+    "df_faturamento['data_ref'] = pd.to_datetime(df_faturamento['data_ref'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "id": "3ecf811d",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "id": "53a6b31b",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1247,7 @@
        "<Axes: xlabel='data_ref'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1270,7 +1270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machine-learnig-py3.12",
+   "display_name": "machine-learnig",
    "language": "python",
    "name": "python3"
   },
@@ -1284,7 +1284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
