arrumei algumas coisas

--- a/Estatistica/desafio.ipynb
+++ b/Estatistica/desafio.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "12ec45fe",
    "metadata": {},
    "outputs": [
@@ -239,6 +239,7 @@
     "ax2.yaxis.set_major_formatter((formatar_milhares))\n",
     "\n",
     "plt.tight_layout() #Melhora a visualização\n",
+    "#ax.bar_label(ax.containers[0])\n",
     "plt.show()"
    ]
   }
