--- a/eda/manage_Dataset.ipynb
+++ b/eda/manage_Dataset.ipynb
@@ -1315,7 +1315,7 @@
     "# Executar um teste de hipótese chamado Chi-Square ou Qui-Quadrado de Pearson\n",
     "# Em um teste de hipótese, duas hipóteses são formuladas:\n",
     "# H0 (Hipótese Nula): as duas variáveis são independentes\n",
-    "# H1 (Hipótese Complementar): as duas variáveis não são independentes\n",
+    "# H1 (Hipótese Complementar): as duas variáveis são dependentes\n",
     "\n",
     "# O teste serve para confirmar ou recusar a hipótese nula\n",
     "# Quando a probabilidade de observarmos H0 é inferior a 0.05 (p-value), \n",
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "43f9fae4",
    "metadata": {},
    "outputs": [
@@ -1688,6 +1688,122 @@
     "# Apresentar Plot Scatter entre Tenure e TotalCharges\n",
     "df_churn.plot.scatter(x='tenure',y='TotalCharges')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa63ce3",
+   "metadata": {},
+   "source": [
+    "## Detecção de outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "356704a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remover linhas com valores nulos\n",
+    "df_churn.dropna(axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61fd4b20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Box Plot Geral\n",
+    "df_churn['TotalCharges'].plot.box()\n",
+    "# Box Plot agrupado por Contract\n",
+    "df_churn.plot.box(column=\"TotalCharges\", by='Contract')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba472aa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criar um dataframe somente com clientes do tipo Month to month\n",
+    "df_churn_month = df_churn[df_churn.Contract=='Month-to-month']\n",
+    "# Histograma - Checar visualmente se os dados seguem uma distribuição normal\n",
+    "df_churn_month.TotalCharges.plot.hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebdde112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Método de Tukey - IQR (Distribuição não normal)\n",
+    "# IQR - Range InterQuartil\n",
+    "# IQR = 3⁰ quartil - 1⁰ quartil\n",
+    "q1_TotalCharges_month = df_churn_month.TotalCharges.quantile(0.25)\n",
+    "q3_TotalCharges_month = df_churn_month.TotalCharges.quantile(0.75)\n",
+    "iqr_TotalCharges_month = q3_TotalCharges_month - q1_TotalCharges_month\n",
+    "iqr_TotalCharges_month\n",
+    "\n",
+    "# Limites Inferior e Superior\n",
+    "limitInf_TotalCharges_month = q1_TotalCharges_month - (iqr_TotalCharges_month * 1.5)\n",
+    "limitSup_TotalCharges_month = q3_TotalCharges_month + (iqr_TotalCharges_month * 1.5)\n",
+    "limitInf_TotalCharges_month, limitSup_TotalCharges_month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "924cd910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_churn_month[(df_churn_month.TotalCharges < limitInf_TotalCharges_month) | (df_churn_month.TotalCharges > limitSup_TotalCharges_month)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e18aed2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ZScore (Usado para distribuição normal)\n",
+    "# Indica quantos desvios padrões um ponto específico de dados está distante da média\n",
+    "# Zscore = (x - média) / desvio padrão\n",
+    "from scipy.stats import zscore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c4a7ec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = np.abs(zscore(df_churn_month.TotalCharges))\n",
+    "df_churn_month[z > 3.0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ae416f3",
+   "metadata": {},
+   "source": [
+    "## Automatizando EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78ad2efe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
